# stupid-ids

./: .gitignore  CMakeLists.txt  README  TODO  build.sh  detect.rb  detectorbase.cpp  detectorbase.h  get_pot_date.py  get_pot_length.py  git-list-file-contents.rb  gitloader.cpp  gitloader.h  is_virgin_pot.py  main.cpp  processorphans.cpp  processorphans.h  sif-add.sh  sif-init.sh  stupids.conf  tcpcommandserver.cpp  tcpcommandserver.h  test.cpp  update.rb  update.sh  xstrdup.h
autotests/: CMakeLists.txt  calculate_tp_hash.cpp  common.cpp  common.h  iddiffer.cpp  sha1_buffer.cpp  test_calculatetphash.cpp  test_iddiff.cpp  test_matchpomessages.cpp  test_sha1buffer.cpp
autotests/data/iddiff/: 1.iddiff  merge_a.iddiff  merge_b.iddiff  merged.iddiff
autotests/data/iddiff/against-empty/: diff-trcomments.iddiff  diff.iddiff  input.po
autotests/data/iddiffer/: 1.iddiff
autotests/data/tp_hash/: change-potdate.po  change-sourcefile.po  change-sourcepos.po  change-trcomments.po  check-tphash.po
autotests/data/tp_hash/json/: base.po.json  change-autocomments.po.json  change-msgctxt.po.json  change-msgid.po.json  change-msgidplural.po.json  change-potdate.po.json  change-sourcefile.po.json  change-sourcepos.po.json  check-tphash.po.json  check-tphash.pot.json
autotests/iddiff/: CMakeLists.txt
calcserver-ruby/: Gemfile
database/: filler-models.rb  update-database.rb
dbuslokalize/: CMakeLists.txt  dbuslokalize.cpp  dbuslokalize.h
dump-ids/: dump-lib.h  gettextpo-helper.h  main.cpp
dump-template/: README  build.sh  main.cpp
examples/: CMakeLists.txt
gettextpo-helper/: CMakeLists.txt  README  gettextpo-helper.h
gettextpo-helper/conflicting-translations/: .gitignore  CMakeLists.txt  build.sh  main.cpp  qtranslationcollector.cpp  qtranslationcollector.h
gettextpo-helper/lib/: CMakeLists.txt  config.cpp  config.h  detector.cpp  detector.h  detectorbase.cpp  detectorbase.h  filedatetime.cpp  filedatetime.h  filedbfirstids.cpp  filedbfirstids.h  gettextpo-helper.cpp  gettextpo-helper.h  gitloader.cpp  gitloader.h  iddiff.cpp  iddiff.h  mappedfile.cpp  mappedfile.h  message.cpp  message.h  messagetranslationbase.h  oidmapcache.cpp  oidmapcache.h  processorphans.cpp  processorphans.h  stupids-client.cpp  stupids-client.h  tphashcache.cpp  tphashcache.h  translation-collector.cpp  translation-collector.h  translationcontent.cpp  translationcontent.h
gettextpo-helper/lib/block-sha1/: sha1.cpp  sha1.h
gettextpo-helper/lib/detector/: build.sh  detector.cpp  detector.h  detectorbase.h  gitloader.cpp  gitloader.h  processorphans.cpp  test.cpp  xstrdup.cpp
gettextpo-helper/lib/include/gettextpo-helper/: detectorbase.h  filedatetime.h  filedbfirstids.h  gettextpo-helper.h  iddiff.h  sha1.h  tphashcache.h  translationcontent.h
gettextpo-helper/ruby-ext/: CMakeLists.txt  extconf.rb  filedbfirstids.cpp  filedbfirstids.h  gettextpo-helper.cpp  gitloader.cpp  gitloader.h  globals.cpp  globals.h  idmapdb.cpp  idmapdb.h  mappedfile.h  message.cpp  message.h  module.cpp  module.h  normalize_database.rb  stupids-server.rb  stupidsruby.cpp  test.rb  translationcontent.cpp  translationcontent.h
globalize/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  messageeditorwidget.cpp  messageeditorwidget.h  messageheaderwidget.cpp  messageheaderwidget.h  messagetranslationoption.cpp  messagetranslationoption.h
globalize/conflicting-translations/: CMakeLists.txt  README  main.cpp
globalize/lib/: qtranslationcollector.cpp  qtranslationcollector.h
lw-server/: lw-server.py
py/: py-iddiff-git.py
py/helpers/: iddiff.py  (+2 more)
stupid-id-filler/: README  add-templates-from-repo.rb  check-lib.rb  check-uniq.rb  get_pot_length.py  git-list-file-contents.rb  sif-add.rb  sif-add.sh  sif-init.sh  sif-lib.rb  stupids-couchbase.json  try-remove-duplicates.rb
stupids-server/: CMakeLists.txt  build.sh  filedbfirstids.cpp  filedbfirstids.h  main.cpp  server.cpp  server.h  stupidsdatabase.cpp  stupidsdatabase.h  tcpcommandserver.cpp  tcpcommandserver.h
tests/: CMakeLists.txt  list_equal_messages_ids.cpp  sha1-buffer.cpp
tests/dump-ids/: .gitignore  CMakeLists.txt  README  dump-ids.cpp
tests/iddiff_merge_headers/: iddiff_merge_headers.cpp
tests/iddiff_merge_headers/data/: a.iddiff  b.iddiff
tests/iddiff_merge_headers/ref/: merged.iddiff
tests/list_equal_messages_ids/: list_equal_messages_ids.cpp
tests/list_equal_messages_ids/data/: dumpids-a.po  dumpids-b.po
tests/ref/: list_equal_messages_ids.txt
tests/sha1_buffer/: sha1_buffer.cpp
tests/tp_hash/: tp_hash.cpp
tests/tp_hash/data/: base.po  change-autocomments.po  change-msgctxt.po  change-msgid.po  change-msgidplural.po  check-tphash.pot
tools/: CMakeLists.txt  README  main.cpp  tools.h
tools/calculate-tp-hash/: .gitignore  CMakeLists.txt  README  build.sh  main.cpp
tools/dbuslokalize/: build.sh  dbuslokalize.cpp  dbuslokalize.h  main.cpp
tools/iddiff/: CMakeLists.txt  main.cpp
tools/iddiff-git/: CMakeLists.txt  build.sh  main.cpp
tools/iddiff-merge/: CMakeLists.txt  main.cpp
tools/iddiff-merge-trcomm/: CMakeLists.txt  main.cpp
tools/iddiff-minimize-ids/: CMakeLists.txt  main.cpp
tools/iddiff-repo/: CMakeLists.txt  build.sh  main.cpp
tools/iddiff-review-format-mailbox/: CMakeLists.txt  main.cpp
tools/iddiff-svn-uncommitted/: iddiff-svn-uncommitted.rb
tools/iddiff-test/: .gitignore  1.iddiff  build.sh  main.cpp
tools/idpatch/: CMakeLists.txt  build.sh  main.cpp
tools/idpatch-comments/: CMakeLists.txt  main.cpp
tools/impl/: findbestmatchingtranslated.cpp  iddiff.cpp  iddiffgit.cpp  iddiffmerge.cpp  iddiffmergetrcomm.cpp  iddiffminimizeids.cpp  iddiffrepo.cpp  iddiffreviewformatmailbox.cpp  idpatch.cpp  lokalizereviewfile.cpp  lokalizereviewiddiff.cpp  rereretrustedfilter.cpp  reversetphash.cpp  tryfilltr.cpp
tools/lokalize-iddiff/: main.cpp
tools/lokalize-review-iddiff/: CMakeLists.txt  build.sh  main.cpp
tools/lokalize-reviewfile/: CMakeLists.txt  build.sh  main.cpp
tools/stupids-rerere-trusted-filter/: CMakeLists.txt  main.cpp
tools/stupids-reverse-tphash/: CMakeLists.txt  main.cpp
(+112 files in other folders)
