add_subdirectory(calculate-tp-hash)
add_subdirectory(iddiff)
add_subdirectory(iddiff-git)
add_subdirectory(iddiff-merge)
add_subdirectory(iddiff-merge-trcomm)
add_subdirectory(iddiff-minimize-ids)
add_subdirectory(iddiff-repo)
add_subdirectory(iddiff-review-format-mailbox)
add_subdirectory(iddiff-test)
add_subdirectory(idpatch)
add_subdirectory(lokalize-reviewfile)
add_subdirectory(lokalize-review-iddiff)
add_subdirectory(stupids-rerere-trusted-filter)
add_subdirectory(stupids-reverse-tphash)
